-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Cluster Scalability
-
Fully Compatible
-
ALL
-
0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The reshardingChangeStreamsMonitor should cleanup any cursors left by previous monitors. The unit test to verify this behavior is flaky as it creates two monitors that both complete successfully after seeing the final event. Their cleanup executors run concurrently, and whichever cleanup runs first kills all cursors matching the resharding UUID. The test was only waiting for one monitor's cleanup before checking the assertion, leading to timing-dependent failures.