SERVER-109232 Make ReshardingChangeStreamsMonitor unittest KillCursorFromPreviousTry robust (#40027)

GitOrigin-RevId: deedb96e26ba828840d57dd19e1dd13655668349